welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: not found: value &&
  if (weekday==true)&&(vacation==true){
                    ^sleepIn:6: error: not found: value &&
  } else if (weekday==true)&&(vacation==false){
                           ^sleepIn:6: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if (weekday==true)&&(vacation==false){
         ^